<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logo_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/orange"
        android:textStyle="bold">

    </TextView>


    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo">

    </ImageView>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:background="@color/orange"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/start_test_button"
        android:textColor="@color/black"
        android:textStyle="bold">

    </Button>

</RelativeLayout>